fixed horizontal scroll

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -2,7 +2,7 @@
 
   .footer-line {
     height: 3px;
-    width: 100vw;
+    width: 100%;
     background-image: url("/assets/img/footer-line.png");
   }
 
