--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,7 +4,7 @@
 
 .footer-line {
   height: 3px;
-  width: 100vw;
+  width: 100%;
   background-image: url("/assets/img/footer-line.png");
 }
 
@@ -137,7 +137,7 @@
   flex-direction: column;
   position: absolute;
   background: #000213;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   padding: 30px;
   gap: 30px;
