--- a/src/app/components/leave-feedback-modal/leave-feedback-modal.component.scss
+++ b/src/app/components/leave-feedback-modal/leave-feedback-modal.component.scss
@@ -6,7 +6,7 @@
   z-index: 111;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: rgba(0, 0, 0, 0.55);
   backdrop-filter: blur(5px);
