--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,7 +1,7 @@
 
 .main {
   position: relative;
-  width: 100vw;
+  width: 100%;
   background: #000213;
 
   //.container {
