--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,7 +52,7 @@ a {
 .modal-dialog {
   position: absolute;
   z-index: 1111;
-  width: 100vw;
+  width: 100%;
   padding: 0;
   margin: 0;
   left: 0;
@@ -138,7 +138,7 @@ input.text-input, textarea {
 
   &__line-decor {
     height: 2px;
-    width: 100vw;
+    width: 100%;
     margin-top: 10px;
     position: absolute;
     left: 0;
